# spa-application

./: .gitignore  README.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 336bfd672cb4_create_supplies_and_suppliers_tables.py  3bc814e486fe_change_value_column_in_products_table.py  41c97b75a174_change_products_table.py  4b3a6c14ea88_create_supplies_and_suppliers_tables.py  4cf05c781d42_init.py  6c2bec547170_init.py  805c9c74240e_create_supplies_and_suppliers_tables.py  920897c5d409_create_supplies_and_suppliers_tables.py  a81d9f6ed6d2_create_supplies_and_suppliers_tables.py  c6229e6df56f_change_units_table.py  c74635cc1194_create_new_tables.py  d21dc0852fe1_create_supplies_and_suppliers_tables.py
backend/app/api/: dependencies.py  main.py
backend/app/api/routing/: books.py  categories.py  products.py  test.py  units.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  adresses.py  categories.py  employee_positions.py  employees.py  products.py  stock.py  store_schedules.py  stores.py  suppliers.py  supplies.py  supply_items.py  supply_surcharges.py  units.py
backend/app/repositories/: categories.py  products.py  units.py
backend/app/schemas/: categories.py  products.py  units.py
backend/app/services/: categories.py  products.py  units.py
