[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.8",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary,pool]>=3.2.5",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "pyjwt>=2.10.1",
    "sentry-sdk[fastapi]>=2.22.0",
    "sqlalchemy>=2.0.38",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.34.0",
]


[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "ruff>=0.9.7",
]
